[gd_scene load_steps=2 format=3 uid="uid://bugdo4tco3y7a"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_dvnxp"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dvnxp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 700.0
offset_top = 104.0
offset_right = 1248.0
offset_bottom = 368.0
theme_override_font_sizes/font_size = 50
text = "Start"

[node name="InstructionsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 692.0
offset_top = 390.0
offset_right = 1256.0
offset_bottom = 673.0
theme_override_font_sizes/font_size = 50
text = "Instructions + Rules
"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 689.0
offset_top = 695.0
offset_right = 1258.0
offset_bottom = 1014.0
theme_override_font_sizes/font_size = 50
text = "Quit
"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="InstructionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="InstructionsButton" to="." method="_on_instructions_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
